feat: stabilize lims integration and subscription flow